# Simple-ragchat-pyver

./: .env.example  .gitignore  CLAUDE.md  README.md  README_SUMMARY.md  Sendbird-Design-Guidelines.md  iOS-Design-Guidelines.md  test_document.txt  로컬실행가이드.md
.github/workflows/: deploy-functions.yml  deploy-infrastructure.yml
backend/: .gitignore  DEVELOPMENT.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/api/: __init__.py  admin.py  chat.py  health.py  upload.py
backend/app/config/: config.yaml
backend/app/modules/: __init__.py  document_processing.py  enhanced_session.py  generation.py  retrieval_rerank.py  session.py
backend/tests/: conftest_full.py  test_api_simple.py  test_basic.py  test_chat.py  test_config_simple.py  test_document_processing.py  test_module_simple.py  test_retrieval_rerank.py  test_simple.py
web/: .env.example  index.html  nixpacks.toml  package-lock.json  package.json  railway.toml  vite.config.ts
web/src/: App.tsx
web/src/components/: ChatTab.tsx  DocumentsTab.tsx  ErrorBoundary.tsx  StatsTab.tsx  UploadTab.tsx
web/src/pages/Admin/: AdminDashboard.tsx
web/src/services/: adminService.ts  api.ts
web/src/types/: index.ts
widget/: package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
widget/build-scripts/: build-widget.js
widget/examples/: complete-integration.html
widget/src/: index.ts
widget/src/components/: ChatBubble.tsx  ChatWindow.tsx  ErrorBoundary.tsx  FloatingChatWidget.tsx  LoadingSpinner.tsx  MessageInput.tsx  MessageList.tsx  TypingIndicator.tsx
widget/src/hooks/: useAccessibility.ts  useChat.ts  useLocalStorage.ts  useMessageStreaming.ts  usePerformanceOptimization.ts  useWebSocket.ts
widget/src/services/: chatAPI.ts  configService.ts
widget/src/styles/: animations.css  widget.css
widget/src/types/: chat.ts  index.ts
widget/src/utils/: sanitizer.ts  validator.ts
